feat(file): isolate files by application
